[package]
name = "loadbalancer"
version = "0.1.0"
authors = ["tganz <tganz@inovex.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper-reverse-proxy = "0.4"
hyper = "0.12"
futures = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
chashmap = "2.2.2"
rand = "0.7.2"